# claude-code-usage-show

./: .gitignore  README.md  claude_usage_app.spec  pyproject.toml
.github/workflows/: build-release.yml
homebrew/: claude-code-usage.rb
scripts/: build_mac.sh  create_icon.py
src/claude_usage/: __init__.py  __main__.py  anthropic_quota.py  app.py  parser.py
src/claude_usage/static/: app.js  index.html  style.css
