[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-usage"
version = "1.0.0"
description = "A dashboard to visualize Claude Code CLI usage statistics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0",
    "psutil>=5.9",
    "pywebview>=5.0",
]

[project.scripts]
claude-usage = "claude_usage.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_usage = ["static/**/*", "templates/**/*"]
